# kafka-protocol

./: .gitignore  Cargo.toml  build.rs  kafka_request_responses.json
examples/: client.rs  server.rs
src/: lib.rs  parser.rs
src/parser/: api_versions_request_v1.rs  api_versions_response_v0.rs  api_versions_response_v1.rs  api_versions_v0_request.rs  api_versions_v0_response.rs  api_versions_v1_request.rs  api_versions_v1_response.rs  api_versions_v2_request.rs  api_versions_v2_response.rs  controlled_shutdown_request_v0.rs  controlled_shutdown_request_v1.rs  controlled_shutdown_response_v1.rs  create_acls_request_v0.rs  create_topics_request_v0.rs  create_topics_request_v1.rs  create_topics_request_v2.rs  create_topics_response_v0.rs  create_topics_response_v1.rs  create_topics_response_v2.rs  delete_acls_request_v0.rs  delete_acls_response_v0.rs  delete_topics_request_v1.rs  delete_topics_request_v2.rs  delete_topics_response_v0.rs  delete_topics_response_v1.rs  delete_topics_response_v2.rs  describe_acls_request_v0.rs  describe_acls_response_v0.rs  describe_configs_request_v0.rs  describe_configs_request_v1.rs  describe_configs_response_v0.rs  describe_configs_response_v1.rs  describe_groups_request_v0.rs  describe_groups_request_v1.rs  describe_groups_request_v2.rs  describe_groups_response_v0.rs  describe_groups_response_v1.rs  describe_groups_response_v2.rs  fetch_request_v0.rs  fetch_request_v1.rs  (+171 more)
