[package]
name = "kafka-protocol"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
combine = "4.5"
crc = "1"
flate2 = "1"
integer-encoding = "3"
itertools = "0.10"
log = "0.4"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }
quick-error = "2"
snap = { version = "1", optional = true }

[build-dependencies]
combine = "4.5"
Inflector = "0.11"
itertools = "0.10"
pretty = "0.7"
serde_json = "1"

[dev-dependencies]
env_logger = "0.8"
once_cell = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time", "io-util"] }
tokio-util = { version = "0.6", features = ["full"] }
bytes = "1.0"
futures = "0.3"
rdkafka = { version = "0.25", features = ["cmake-build"] }

[features]
regenerate = []
